<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/main_search"
        android:id="@+id/main_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item
        android:title="@string/main_clear"
        android:id="@+id/main_clearowner"
        app:showAsAction="always"
        android:icon="@drawable/ic_cancel_user"/>

    <item
        android:orderInCategory="100"
        android:title="@string/main_searchmode"
        app:showAsAction="never"/>

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/main_bytags"
            android:orderInCategory="200"
            android:title="@string/main_bytags"
            app:showAsAction="never"
            android:checked = "true"/>

        <item
            android:id="@+id/main_bytext"
            android:orderInCategory="300"
            android:title="@string/main_bytext"
            app:showAsAction="never" />

        <item
            android:visible="false"
            android:id="@+id/main_byowner"
            android:orderInCategory="400"
            android:title="@string/main_byowner"
            app:showAsAction="never" />
    </group>
    <item
        android:id="@+id/main_ownerall"
        android:orderInCategory="500"
        android:title="@string/main_ownerall"
        app:showAsAction="never" />
</menu>