<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/about_background"
    android:orientation="vertical"
    tools:context=".Nav_About">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:layout_gravity="center"
        android:padding="5dp"
        android:src="@drawable/flickr_image"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:textSize="30sp"
        android:textColor="#1822aa"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="5"
        android:text="@string/app_name"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="15sp"
        android:textColor="#000000"
        android:text="@string/about_version"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1.3"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="15sp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:text="@string/about_text1"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="20sp"
        android:textColor="#FF0000"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="5"
        android:text="@string/yandex"
        android:layout_gravity="center"/>
    <ScrollView
        android:layout_width="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_height="0dp"
        android:layout_weight="9">
        <TextView
            android:id="@+id/about_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"/>
    </ScrollView>
</LinearLayout>